projected map callback

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ set(PROJECT_DEPENDENCIES
   image_transport
   message_generation
   message_runtime
+  grid_map
 )
 
 find_package(catkin REQUIRED COMPONENTS
