--- a/package.xml
+++ b/package.xml
@@ -19,6 +19,8 @@
   <depend>image_transport</depend>
   <depend>message_generation</depend>
   <depend>message_runtime</depend>
+  <depend>grid_map_core</depend>
+  <depend>grid_map_cv</depend>
   
   <export></export>
   
