--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ set(PROJECT_DEPENDENCIES
   message_runtime
   grid_map_core
   grid_map_cv
+  grid_map_ros
 )
 
 find_package(catkin REQUIRED COMPONENTS
