--- a/package.xml
+++ b/package.xml
@@ -21,6 +21,7 @@
   <depend>message_runtime</depend>
   <depend>grid_map_core</depend>
   <depend>grid_map_cv</depend>
+  <depend>grid_map_ros</depend>
   
   <export></export>
   
