--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.0.2)
 set(PROJECT_NAME path_planner)
 project(${PROJECT_NAME})
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_BUILD_TYPE DebWithRelInfo)
 
 set(PROJECT_DEPENDENCIES 
   roscpp  
@@ -16,6 +17,7 @@ set(PROJECT_DEPENDENCIES
   image_transport
   message_generation
   message_runtime
+  backward_ros
 )
 
 find_package(catkin REQUIRED COMPONENTS
